--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --empowerlocal-gold-dark: #d97706;
   --empowerlocal-coral: #F97316;
   --empowerlocal-terracotta: #C2410C;
-  --empowerlocal-success: #34D399;
+  --empowerlocal-green: #34D399;
   --empowerlocal-warning: #FBBF24;
   --empowerlocal-error: #EF4444;
   --empowerlocal-info: #60A5FA;
